# awq-qwen-experiment

./: .gitignore  LICENSE  README.md  pyproject.toml
awq/: __main__.py  calibrate.py  cli.py  inference.py  models.py  quantize.py  scales.py
docs/: architecture.md  benchmark.md  calibration.md  cli.md  development.md  ec2.md  index.md  inference.md  pipeline.md  quantization.md
eval/: benchmark.py  runner.py
results/qwen_awq_int4/: metadata.json
tests/: test_pipeline.py
utils/: errors.py  memory.py
