[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awq-qwen-experiment"
version = "0.2.0"
description = "AWQ quantization experimentation pipeline"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Ege Sabanci" },
]

requires-python = ">=3.11"
dependencies = [
    "torch>=2.4.0",
    "transformers>=4.43.0",
    "datasets>=3.0.0",
    "safetensors>=0.4.0",
    "accelerate>=1.0.0",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
]

[project.urls]
Repository = "https://github.com/egesabanci/awq-qwen-experiment"

[tool.hatch.build.targets.wheel]
packages = [
    "awq",
    "data",
    "eval",
    "utils",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.5.0",
]
